fixes to styling:  - text colour, padding, alignment...

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,7 +11,7 @@ $line-height-base: 1.6;
 
 // // Overriding backpack variables
 // $primary: #ff223a;
-// $secondary: #9bb8d3;
+$secondary: #b0b4b5;
 // $success: #00b388;
 // $info: #7d55c7;
 // $warning: #f3d03e;
